--- a/search/index.html
+++ b/search/index.html
@@ -5,7 +5,7 @@
 <link rel=stylesheet href=/scss/style.min.css><meta property="og:title" content="Search">
 <meta property="og:description" content>
 <meta property="og:url" content="https://sashiyalala.github.io/search/">
-<meta property="og:site_name" content="Example Site">
+<meta property="og:site_name" content="shasha">
 <meta property="og:type" content="article"><meta property="article:section" content="Page">
 <meta name=twitter:title content="Search">
 <meta name=twitter:description content><link rel=alternate type=application/json href=https://sashiyalala.github.io/search/index.json><link rel=preload href=https://sashiyalala.github.io/search/index.json as=fetch crossorigin=anonymous>
@@ -20,11 +20,11 @@
 </button>
 <header class=site-info>
 <figure class=site-avatar>
-<img src=/img/avatar_huda2458f72ce188392d75c5d51cd8e24e_373_300x0_resize_box_3.png width=300 height=300 class=site-logo loading=lazy alt=Avatar>
-<span class=emoji>🍥</span>
+<img src=/img/moon_avatar_huf3ba666a7f100eee895039f74d96c1cc_2518618_300x0_resize_q75_box.jpg width=300 height=300 class=site-logo loading=lazy alt=Avatar>
+<span class=emoji>🌃</span>
 </figure>
-<h1 class=site-name><a href=https://sashiyalala.github.io>Example Site</a></h1>
-<h2 class=site-description>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2>
+<h1 class=site-name><a href=https://sashiyalala.github.io>shasha</a></h1>
+<h2 class=site-description>any pronouns</h2>
 </header>
 <ol class=menu id=main-menu>
 <li>
@@ -67,8 +67,7 @@
 <footer class=site-footer>
 <section class=copyright>
 &copy;
-2020 -
-2021 Example Site
+2021 shasha
 </section>
 <section class=powerby>
 Built with <a href=https://gohugo.io/ target=_blank rel=noopener>Hugo</a> <br>
